IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/30/06: Automatically checking Seed mode and Autocenter in 3dmod Bead Fixer
as needed when opening the .preali file.

3/30/06: Added individual advanced/basic buttons to Coarse Alignment.

3/27/06: Added advanced checkboxes "Convert to bytes", which adds "-mo 0" to
prenewst.com, and "Float intensities to mean", which adds "-float 2" to
prenewst.com, to coarse align page.

3/27/06: Fixed problem in cubic interpolation routine that showed up when
running Tiltxcorr with a rotation angle of exactly 90 degrees.

3/24/06: IMOD_3-8-4
3/24/06: Modified Tilt and Splittilt so that parallel reconstruction will
write directly to a single output file, eliminating need to reassemble.

3/24/06: Fixed progress monitor for mtffilter with files > 2 GB.

3/23/06: Fixed Splittilt so it takes image size from aligned stack instead
of assuming that FULLIMAGE is the size to do, so it will work with an
oversized or subset aligned stack.

3/23/06: In Setup Tomogram, improved the popup message when the dual axis
image stack does not end in a.st.

3/23/06: Fixed bug in Avgstack that averaged all sections when 0,0 was entered,
which was making auto alignment of first section boundary in a join fail when
there was only one sample slice from the first section.

3/22/06: Fixed Tilt so a negative SUBSETSTART could be used to reconstruct
from an aligned stack that is bigger than the original stack.

3/22/06: In Tomogram Generation, backing up the fully aligned stack when "Use
Filtered Stack" is pressed.  Also backing up the tomogaram when "Use Current
Trial Tomogram is pressed.

3/21/06: In the Join Align tab, moved the chunk display so the chunk number
matched the row number.

3/20/06: Etomo: Added a generic interface for parallel processing to a separate
tab.

3/15/06: Parallel processing for a single computer with multiple CPUs is now
available in Windows.
